--- a/src/pages/website/__search/website__search.pug
+++ b/src/pages/website/__search/website__search.pug
@@ -2,7 +2,7 @@ include /components/footer/footer.pug
 include /components/header/header.pug
 
 head 
-  title TOXIN HOTEL / LANDING
+  title TOXIN HOTEL / SEARCH
 
 body.website__body
   header.website__header
