--- a/src/pages/website/__no-page/website__no-page.pug
+++ b/src/pages/website/__no-page/website__no-page.pug
@@ -4,10 +4,10 @@ include /components/header/header.pug
 head 
   title 404 / Not Found
 
-body.ui-kit__body.bg-color_whisper
-  header.ui-kit__header
+body.website__body.bg-color_whisper
+  header.website__header
     +header({authorization: true})
-  main.ui-kit__main.notfound
+  main.website__main.notfound
     span.notfound_text 404 NOT FOUND
-  footer.ui-kit__footer
+  footer.website__footer
     +footer({type: 'default'})
