--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,4 +1,11 @@
 .index-links {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  grid-gap: 50px;
   margin-top: 80px;
   margin-left: 80px;
+
+  & > * {
+    min-width: 130px;
+  }
 }
