--- a/src/pages/website/website.scss
+++ b/src/pages/website/website.scss
@@ -1,11 +1,8 @@
 @import "@variables";
 
-.ui-kit {
+.website {
   &__body {
-    margin: auto;
-    width: 1440px;
-    font-family: Montserrat, Quicksand, sans-serif;
-    user-select: none;
+    width: 100%;
   }
 
   &__header {
@@ -24,16 +21,3 @@
   }
 }
 
-.bg-color {
-  &_white {
-    background-color: white;
-  }
-
-  &_whisper {
-    background-color: $whisper;
-  }
-}
-
-.frozen {
-  pointer-events: none;
-}
