Refactored website pages, now its an extenders of main template

--- a/src/pages/website/__login/website__login.pug
+++ b/src/pages/website/__login/website__login.pug
@@ -1,14 +1,4 @@
-include /components/footer/footer.pug
-include /components/header/header.pug
+extends ../website.pug
 
-head 
+block head
   title TOXIN HOTEL / LOGIN
-
-body.website__body
-  header.website__header
-    +header({authorization: false})
-
-  main.website__main
-
-  footer.website__footer
-    +footer({type: 'default'})
