--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -1,33 +1,38 @@
-include /components/logo/logo.pug
-include /components/navigation-bar/navigation-bar.pug
+extends /pages/ui-kit/ui-kit.pug
 
-head 
+
+block head 
   title FEDSEC / Index
 
-body.ui-kit__body
-  header.ui-kit__header
-    +logo({ type: "monochrome", disabled: true })
-  main.ui-kit__main
-    .index-links 
-      +navigationBar({
-        vertical: true,
-        title: "ui kit",
-        links: [
-          { name: "cards",             href: "ui-kit__cards.html" },
-          { name: "colors & type",     href: "ui-kit__colors-n-type.html" },
-          { name: "form elements",     href: "ui-kit__form-elements.html" },
-          { name: "headers & footers", href: "ui-kit__headers-n-footers.html" }
-        ]
-      })
-      +navigationBar({
-        vertical: true,
-        title: "toxin hotel",
-        links: [
-          { name: "landing",      href: "website__landing.html" },
-          { name: "login",        href: "website__login.html" },
-          { name: "registration", href: "website__registration.html" },
-          { name: "room",         href: "website__room.html" },
-          { name: "search",       href: "website__search.html" }
-        ]
-      })
-  footer.ui-kit__footer
+
+block header
+  include /components/logo/logo.pug
+
+  +logo({ type: "monochrome", disabled: true })
+
+
+block main
+  include /components/navigation-bar/navigation-bar.pug
+
+  .index-links 
+    +navigationBar({
+      vertical: true,
+      title: "ui kit",
+      links: [
+        { name: "cards",             href: "ui-kit__cards.html" },
+        { name: "colors & type",     href: "ui-kit__colors-n-type.html" },
+        { name: "form elements",     href: "ui-kit__form-elements.html" },
+        { name: "headers & footers", href: "ui-kit__headers-n-footers.html" }
+      ]
+    })
+    +navigationBar({
+      vertical: true,
+      title: "toxin hotel",
+      links: [
+        { name: "landing",      href: "website__landing.html" },
+        { name: "login",        href: "website__login.html" },
+        { name: "registration", href: "website__registration.html" },
+        { name: "room",         href: "website__room.html" },
+        { name: "search",       href: "website__search.html" }
+      ]
+    })
