--- a/src/pages/ui-kit/__cards/ui-kit__cards.pug
+++ b/src/pages/ui-kit/__cards/ui-kit__cards.pug
@@ -1,43 +1,47 @@
-include /components/logo/logo.pug
+extends /pages/ui-kit/ui-kit.pug
 
-include /components/card/__registration/card__registration.pug
-include /components/card/__find-room/card__find-room.pug
-include /components/card/__login/card__login.pug
-include /components/card/__room-booking/card__room-booking.pug
-include /components/card/__room-sample/card__room-sample.pug
 
-head 
+block head 
   title UI KIT / Cards
 
-body.ui-kit__body.bg-color_whisper
-  header.ui-kit__header
-    +logo({ type: "monochrome" })
-  main.ui-kit__main
-    .headers-n-footers__wrap
-      .headers-n-footers__column
-        +cardFindRoom()
-        +cardRegistration()
-      .headers-n-footers__column
-        +cardRoomBooking()
-        +cardLogin()
-      .headers-n-footers__column
-        +cardRoomSample({
-          room: 888,
-          price: 9990,
-          rate: 5,
-          luxe: true,
-          count: {
-            reviews: 145,
-            pictures: 3,
-          }
-        })
-        +cardRoomSample({
-          room: 840,
-          price: 9990,
-          rate: 4,
-          count: {
-            reviews: 65,
-            pictures: 1,
-          }
-        })
-  footer.ui-kit__footer
+
+block header
+  include /components/logo/logo.pug
+
+  +logo({ type: "monochrome" })
+
+
+block main
+  include /components/card/__registration/card__registration.pug
+  include /components/card/__find-room/card__find-room.pug
+  include /components/card/__login/card__login.pug
+  include /components/card/__room-booking/card__room-booking.pug
+  include /components/card/__room-sample/card__room-sample.pug
+
+  .headers-n-footers__wrap
+    .headers-n-footers__column
+      +cardFindRoom()
+      +cardRegistration()
+    .headers-n-footers__column
+      +cardRoomBooking()
+      +cardLogin()
+    .headers-n-footers__column
+      +cardRoomSample({
+        room: 888,
+        price: 9990,
+        rate: 5,
+        luxe: true,
+        count: {
+          reviews: 145,
+          pictures: 3,
+        }
+      })
+      +cardRoomSample({
+        room: 840,
+        price: 9990,
+        rate: 4,
+        count: {
+          reviews: 65,
+          pictures: 1,
+        }
+      })
