Refactored ui-kit pages, according to their background color

--- a/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
+++ b/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
@@ -5,10 +5,8 @@ block head
   title UI KIT / Form Elements
 
 
-block header
-  include /components/logo/logo.pug
-
-  +logo({ type: "monochrome" })
+block append body
+  body.ui-kit__body.bg-color_white
 
 
 block main
