Pages visual bugs fixes

--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -5,6 +5,10 @@ block head
   title FEDSEC / Index
 
 
+block append body
+  body.ui-kit__body.bg-color_white
+
+
 block header
   include /components/logo/logo.pug
 
