--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(2, auto);
   grid-gap: 50px;
+  align-items: start;
   margin-top: 80px;
   margin-left: 80px;
 
