--- a/src/pages/ui-kit/__headers-n-footers/ui-kit__headers-n-footers.pug
+++ b/src/pages/ui-kit/__headers-n-footers/ui-kit__headers-n-footers.pug
@@ -6,7 +6,7 @@ block head
 
 
 block append body
-  body.ui-kit__body.bg-color_whisper
+  body.ui-kit__body_no-padding.bg-color_whisper
 
 
 block main
