--- a/src/pages/ui-kit/ui-kit.scss
+++ b/src/pages/ui-kit/ui-kit.scss
@@ -3,15 +3,20 @@
 .ui-kit {
   &__body {
     width: 1440px;
+
+    & > .ui-kit__main {
+      padding: 0px 158px 0px 150px;
+    }
+
+    &_no-padding {
+      width: 100%;
+      padding: 0;
+    }
   }
 
   &__header {
     height: 140px;
     width: 100%;
-  }
-
-  &__main {
-    padding: 0px 158px 0px 150px;
   }
   
   &__footer {
