Login and registragion pages is under construction

--- a/src/pages/website/__login/website__login.pug
+++ b/src/pages/website/__login/website__login.pug
@@ -2,3 +2,9 @@ extends /pages/website/website.pug
 
 block head
   title TOXIN HOTEL / LOGIN
+
+block main
+  include /components/card/__login/card__login.pug
+
+  main.website__main.bg-pic__login-n-registration
+    +cardLogin()
