--- a/src/pages/website/__registration/website__registration.pug
+++ b/src/pages/website/__registration/website__registration.pug
@@ -2,3 +2,9 @@ extends /pages/website/website.pug
 
 block head 
   title TOXIN HOTEL / REGISTRATION
+
+block main
+  include /components/card/__registration/card__registration.pug
+
+  main.website__main.bg-pic__login-n-registration
+    +cardRegistration()
