--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -6,7 +6,7 @@ block head
 
 
 block append body
-  body.ui-kit__body.bg-color_white
+  body.ui-kit__body_no-padding.bg-color_white
 
 
 block header
@@ -18,25 +18,26 @@ block header
 block main
   include /components/navigation-bar/navigation-bar.pug
 
-  .index-links 
-    +navigationBar({
-      vertical: true,
-      title: "ui kit",
-      links: [
-        { name: "cards",             href: "ui-kit__cards.html" },
-        { name: "colors & type",     href: "ui-kit__colors-n-type.html" },
-        { name: "form elements",     href: "ui-kit__form-elements.html" },
-        { name: "headers & footers", href: "ui-kit__headers-n-footers.html" }
-      ]
-    })
-    +navigationBar({
-      vertical: true,
-      title: "toxin hotel",
-      links: [
-        { name: "landing",      href: "website__landing.html" },
-        { name: "login",        href: "website__login.html" },
-        { name: "registration", href: "website__registration.html" },
-        { name: "room",         href: "website__room.html" },
-        { name: "search",       href: "website__search.html" }
-      ]
-    })
+  .index-links__container
+    .index-links 
+      +navigationBar({
+        vertical: true,
+        title: "ui kit",
+        links: [
+          { name: "cards",             href: "ui-kit__cards.html" },
+          { name: "colors & type",     href: "ui-kit__colors-n-type.html" },
+          { name: "form elements",     href: "ui-kit__form-elements.html" },
+          { name: "headers & footers", href: "ui-kit__headers-n-footers.html" }
+        ]
+      })
+      +navigationBar({
+        vertical: true,
+        title: "toxin hotel",
+        links: [
+          { name: "landing",      href: "website__landing.html" },
+          { name: "login",        href: "website__login.html" },
+          { name: "registration", href: "website__registration.html" },
+          { name: "room",         href: "website__room.html" },
+          { name: "search",       href: "website__search.html" }
+        ]
+      })
