--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,12 +1,20 @@
 .index-links {
-  display: grid;
-  grid-template-columns: repeat(2, auto);
-  grid-gap: 50px;
-  align-items: start;
-  margin-top: 80px;
-  margin-left: 80px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  width: 50%;
+  max-width: 650px;
 
   & > * {
     min-width: 130px;
+  }
+
+
+  &__container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: flex-start;
   }
 }
