--- a/src/pages/ui-kit/ui-kit.scss
+++ b/src/pages/ui-kit/ui-kit.scss
@@ -5,7 +5,7 @@
     width: 1440px;
 
     & > .ui-kit__main {
-      padding: 0px 158px 0px 150px;
+      padding: 0px 140px;
     }
 
     &_no-padding {
