--- a/src/components/type-sample/type-sample.scss
+++ b/src/components/type-sample/type-sample.scss
@@ -1,22 +1,22 @@
 @import "@variables";
 
-.type-item {
+.type-sample {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
 
-  &__array {
+  &__container {
     display: grid;
     grid-row: 7;
     grid-gap: 51px;
   }
 
-  &__style-name {
+  &__associative-tag {
     font-weight: normal;
     color: rgba($valhalla, .25);
   }
 
-  &__note {
+  &__usage-instruction {
     display: inherit;
     margin-left: 30px;
     width: 369px;
