Colors-n-types page outlook fixes according to pixel-perfect

--- a/src/components/color-sample/color-sample.scss
+++ b/src/components/color-sample/color-sample.scss
@@ -25,6 +25,11 @@
     justify-content: center;
   }
 
+  &__title,
+  &__color-hexcode {
+    padding-block: 3px;
+  }
+
   &__color-hexcode {
     font-weight: normal;
   }
