--- a/src/pages/ui-kit/__colors-n-type/ui-kit__colors-n-type.scss
+++ b/src/pages/ui-kit/__colors-n-type/ui-kit__colors-n-type.scss
@@ -1,6 +1,14 @@
-.colors-n-type-samples {
-  display: grid;
+.samples {
+  display: flex;
   align-items: start;
   justify-content: space-between;
-  padding: 0px 10px;
+  margin-top: 5px;
+
+  &__colors {
+    margin-left: 10px;
+  }
+
+  &__type {
+    margin-right: 18px;
+  }
 }
