Fixed questionmark absence in proper sentences

--- a/src/components/card/__login/card__login.pug
+++ b/src/components/card/__login/card__login.pug
@@ -27,7 +27,7 @@ mixin cardLogin()
 
     .login__registration-section
       .login__registration-section-container.card-footer
-        span.custom-font-style_body Нет аккаунта на Toxin
+        span.custom-font-style_body Нет аккаунта на Toxin?
         +meanOvalButtons({
           groupname: "login__button_registration",
           buttons: [
