--- a/src/components/card/__registration/card__registration.pug
+++ b/src/components/card/__registration/card__registration.pug
@@ -42,7 +42,7 @@ mixin cardRegistration()
 
     .registration__login-section
       .registration__login-section-container.card-footer
-        span.custom-font-style_body Уже есть аккаунт на Toxin
+        span.custom-font-style_body Уже есть аккаунт на Toxin?
         +meanOvalButtons({
           groupname: "registration__button_login",
           buttons: [
