--- a/src/components/button/__toggle/button__toggle.scss
+++ b/src/components/button/__toggle/button__toggle.scss
@@ -33,8 +33,8 @@
   }
 
   &__label {
-    display: flex;
-    align-items: flex-start;
+    position: relative;
+    top: -2px;
     cursor: pointer;
   }
 }
