Optimized css stylesheets for website template and both registration and login pages

--- a/src/pages/website/__registration/website__registration.pug
+++ b/src/pages/website/__registration/website__registration.pug
@@ -6,6 +6,5 @@ block head
 block main
   include /components/card/__registration/card__registration.pug
 
-  main.website__main
-    .wrap_registration-card.bg-pic__login-n-registration
-      +cardRegistration()
+  main.website__main.bg-pic__login-n-registration
+    +cardRegistration()
