--- a/src/pages/website/website.scss
+++ b/src/pages/website/website.scss
@@ -1,5 +1,17 @@
 @import "@variables";
 
+@media screen and (max-width: 1160px) {
+  .footer_default {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1160px) {
+  .footer_mobile {
+    display: none;
+  }
+}
+
 .website {
   &__header {
     width: 100%;
@@ -20,6 +32,8 @@
   }
 
   &__landing {
+    padding-top: 70px;
+    padding-inline: 140px;
     min-height: 830px;
     background-image: url("/src/assets/images/raster/background/background__landing.png");
   }
