Footer and website general template is under construction

--- a/src/pages/website/website.pug
+++ b/src/pages/website/website.pug
@@ -11,7 +11,7 @@ body.website__body
   block main
 
   footer.website__footer
-    .footer_default
+    .website__footer_default
       +footer({ type: 'default' })
-    .footer_mobile 
+    .website__footer_mobile 
       +footer({ type: 'mobile' })
