Minor display bug fixes

--- a/src/pages/website/__landing/website__landing.scss
+++ b/src/pages/website/__landing/website__landing.scss
@@ -1,6 +1,7 @@
 .landing__bg-note {
   position: absolute;
-  right: 0px;
+  text-align: right;
+  right: 140px;
   bottom: 18px;
   width: 297px;
 }
