--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -41,33 +41,35 @@ mixin footer( item )
   case item.type
     when 'default'
       .footer.footer_default
-        .footer__upper-section
-          .footer__content_shell
-            .footer__logotype
-              +logo({ type: "colorful" })
-            .footer__awards-text
-              span.custom-font-style_body Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
+        .footer__sections_upper
+          .footer__content
+            .footer__content_shell
+              .footer__logotype
+                +logo({ type: "colorful" })
+              .footer__awards-text
+                span.custom-font-style_body Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
 
-          each unit in navBarUnits
-            .footer__content_core
-              +navigationBar( unit )
+            each unit in navBarUnits
+              .footer__content_core
+                +navigationBar( unit )
 
-          .footer__content_shell
-            +titleBar("подписка")
-            span.custom-font-style_body Получайте специальные предложения и новости сервиса
-            +input({
-              placeholder: "Email",
-              type: "subscription",
-              widthbypercent: 81,
-            })
+            .footer__content_shell
+              +titleBar("подписка")
+              span.custom-font-style_body Получайте специальные предложения и новости сервиса
+              +input({
+                placeholder: "Email",
+                type: "subscription",
+                widthbypercent: 81,
+              })
 
-        .footer__lower-section
-          .footer__lower-section_left
-            span.custom-font-style_body Copyright © 2018 Toxin отель. Все права защищены.
-          .footer__lower-section_right
+        .footer__sections_lower
+          .footer__content
+            .footer__content_copyright
+              span.custom-font-style_body Copyright © 2018 Toxin отель. Все права защищены.
+            .footer__content_icons
 
     when 'mobile'
       .footer.footer_mobile
-        .footer__central-section
+        .footer__the-only-mobile-section 
           +logo({ type: "colorful" })
           span.custom-font-style_body Copyright © 2018 Toxin отель. Все права защищены.
