--- a/src/variables/variables.scss
+++ b/src/variables/variables.scss
@@ -14,7 +14,6 @@ $port-gore: #3D4975;
 
 $whisper: #E5E5E5;
 
-
 @function defineGradient( $primary, $secondary ) {
   @return linear-gradient(180deg, $primary 0%, $secondary 100%);
 }
@@ -23,3 +22,6 @@ $primary-gradient:    defineGradient( $perfume, $portage );
 $secondary-gradient:  defineGradient( $silver-tree, $turquoise-blue );
 $tertiary-gradient:   defineGradient( $cream-brulee, $mandys-pink );
 $quaternary-gradient: defineGradient( $suva-grey , $port-gore );
+
+$wideFramesWidthMax: 1600px;
+$wideFramesWidthMin: 1160px;
