Minor style fixes of header, mobile footer also now a lil bit more rubbery than earlier

--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -70,6 +70,6 @@ mixin footer( item )
 
     when 'mobile'
       .footer.footer_mobile
-        .footer__the-only-mobile-section 
+        .footer__mobile-section
           +logo({ type: "colorful" })
           span.custom-font-style_body Copyright © 2018 Toxin отель. Все права защищены.
