--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,15 +1,8 @@
 @import "@variables";
 
 .footer {
-  background-color: white;
-
-  &_default,
-  &_mobile {
+  &_default{
     width: 100%;
-  }
-
-  &_mobile {
-    max-width: 768px;
   }
 
   &__sections {
@@ -17,9 +10,9 @@
     &_lower {
       display: flex;
       justify-content: center;
-      background-color: white;
       box-sizing: border-box;
       padding-inline: 140px;
+      background-color: white;
     }
 
     &_upper {
@@ -35,12 +28,19 @@
     }
   }
 
-  &__the-only-mobile-section {
+  &_mobile,
+  &__mobile-section {
     display: flex;
-    justify-content: center;
-    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+
+  &__mobile-section {
+    flex-direction: column;
     height: 367px;
+    max-width: 768px;
+    background-color: white;
 
     & > span {
       margin-block: 20px 25px;
@@ -53,7 +53,6 @@
     width: 100%;
     max-width: $wideFramesWidthMax;
     min-width: $wideFramesWidthMin;
-
 
     &_shell {
       display: grid;
