Websites main block were adjusted according to header and footer adaptive behavior

--- a/src/pages/website/__landing/website__landing.pug
+++ b/src/pages/website/__landing/website__landing.pug
@@ -7,7 +7,8 @@ block main
   include /components/card/__find-room/card__find-room.pug
 
   main.website__main.bg-pic__landing
-    +cardFindRoom()
+    .landing-page.universal-container
+      +cardFindRoom()
 
-    span.landing__bg-note.custom-font-style_body Лучшие номера для вашей работы, отдыха и просто вдохновения
+      span.landing-page__bg-note.custom-font-style_body Лучшие номера для вашей работы, отдыха и просто вдохновения
 
