--- a/src/pages/website/__landing/website__landing.scss
+++ b/src/pages/website/__landing/website__landing.scss
@@ -1,7 +1,7 @@
-.landing__bg-note {
+.landing-page__bg-note {
   position: absolute;
-  text-align: right;
-  right: 140px;
   bottom: 18px;
+  right: 0px;
   width: 297px;
+  text-align: right;
 }
