--- a/src/pages/website/__login/website__login.pug
+++ b/src/pages/website/__login/website__login.pug
@@ -7,4 +7,5 @@ block main
   include /components/card/__login/card__login.pug
 
   main.website__main.bg-pic__login-n-registration
-    +cardLogin()
+    .login-page.universal-container
+      +cardLogin()
