--- a/src/pages/website/__no-page/website__no-page.pug
+++ b/src/pages/website/__no-page/website__no-page.pug
@@ -4,4 +4,6 @@ block head
   title 404 / Not Found
 
 block main
-  span.notfound_text 404 NOT FOUND
+  main.website__main
+    .no-page.universal-container
+      span.not-found_text 404 NOT FOUND
