--- a/src/pages/website/__search/website__search.pug
+++ b/src/pages/website/__search/website__search.pug
@@ -2,3 +2,7 @@ extends ../website.pug
 
 block head 
   title TOXIN HOTEL / SEARCH
+
+block main
+  main.website__main
+    .search-page.universal-container
