--- a/src/pages/website/__registration/website__registration.pug
+++ b/src/pages/website/__registration/website__registration.pug
@@ -7,4 +7,5 @@ block main
   include /components/card/__registration/card__registration.pug
 
   main.website__main.bg-pic__login-n-registration
-    +cardRegistration()
+    .registration-page.universal-container
+      +cardRegistration()
