--- a/src/pages/website/__room/website__room.pug
+++ b/src/pages/website/__room/website__room.pug
@@ -6,9 +6,11 @@ block head
 block main 
   include /components/votes-chart/votes-chart.pug
   
-  +votesChart([
-    { gradient: "primary",    votes: 65,  legend: "Удовлетворительно" },
-    { gradient: "secondary",  votes: 65,  legend: "Хорошо"            },
-    { gradient: "tertiary",   votes: 130, legend: "Великолепно"       },
-    { gradient: "quaternary", votes: 0,   legend: "Разочарован"       }
-  ])
+  main.website__main
+    .room-page.universal-container
+      +votesChart([
+        { gradient: "primary",    votes: 65,  legend: "Удовлетворительно" },
+        { gradient: "secondary",  votes: 65,  legend: "Хорошо"            },
+        { gradient: "tertiary",   votes: 130, legend: "Великолепно"       },
+        { gradient: "quaternary", votes: 0,   legend: "Разочарован"       }
+      ])
