--- a/src/pages/ui-kit/__cards/ui-kit__cards.pug
+++ b/src/pages/ui-kit/__cards/ui-kit__cards.pug
@@ -26,19 +26,20 @@ block main
     .headers-n-footers__column
       +cardRoomSample({
         room: 888,
-        price: 9990,
-        rate: 5,
         luxe: true,
+        price: 9990,
         count: {
+          rate: 5,
           reviews: 145,
           pictures: 3,
         }
       })
       +cardRoomSample({
         room: 840,
+        luxe: false,
         price: 9990,
-        rate: 4,
         count: {
+          rate: 4,
           reviews: 65,
           pictures: 1,
         }
