--- a/src/pages/website/__search/website__search.pug
+++ b/src/pages/website/__search/website__search.pug
@@ -4,8 +4,10 @@ block head
   title TOXIN HOTEL / SEARCH
 
 block main
-  -
-    const rooms = [
+  include /components/card/__room-sample/card__room-sample.pug
+
+  - 
+    const roomsData = [
       {
         room: 888,
         luxe: true,
@@ -13,7 +15,7 @@ block main
         count: {
           rate: 5,
           reviews: 145,
-          pictures: 3,
+          pictures: 3
         }
       },
       {
@@ -22,7 +24,7 @@ block main
         price: 9990,
         count: {
           rate: 4,
-          reviews: 65,
+          reviews: 65
         }
       },
       {
@@ -31,7 +33,7 @@ block main
         price: 8500,
         count: {
           rate: 3,
-          reviews: 35,
+          reviews: 35
         }
       },
       {
@@ -40,7 +42,7 @@ block main
         price: 7300,
         count: {
           rate: 5,
-          reviews: 19,
+          reviews: 19
         }
       },
       {
@@ -49,10 +51,75 @@ block main
         price: 6000,
         count: {
           rate: 4,
-          reviews: 44,
+          reviews: 44
+        }
+      },
+      {
+        room: 982,
+        luxe: false,
+        price: 5800,
+        count: {
+          rate: 3,
+          reviews: 56
+        }
+      },
+      {
+        room: 678,
+        luxe: false,
+        price: 5500,
+        count: {
+          rate: 5,
+          reviews: 45
+        }
+      },
+      {
+        room: 450,
+        luxe: false,
+        price: 5300,
+        count: {
+          rate: 4,
+          reviews: 39
+        }
+      },
+      {
+        room: 350,
+        luxe: false,
+        price: 5000,
+        count: {
+          rate: 3,
+          reviews: 77
+        }
+      },
+      {
+        room: 666,
+        luxe: false,
+        price: 5000,
+        count: {
+          rate: 5,
+          reviews: 25
+        }
+      },
+      {
+        room: 444,
+        luxe: false,
+        price: 5000,
+        count: {
+          rate: 3,
+          reviews: 15
+        }
+      },
+      {
+        room: 352,
+        luxe: false,
+        price: 5000,
+        count: {
+          rate: 3,
+          reviews: 55
         }
       }
-
     ]
+
   main.website__main
     .search-page.universal-container
+      each room in roomsData
+        +cardRoomSample( room )
