--- a/src/pages/website/__search/website__search.pug
+++ b/src/pages/website/__search/website__search.pug
@@ -4,8 +4,6 @@ block head
   title TOXIN HOTEL / SEARCH
 
 block main
-  include /components/card/__room-sample/card__room-sample.pug
-
   - 
     const roomsData = [
       {
@@ -119,7 +117,64 @@ block main
       }
     ]
 
+  include /components/button/__checkbox/button__checkbox.pug
+  include /components/card/__room-sample/card__room-sample.pug
+  include /components/title-bar/title-bar.pug
+  include /components/pagination/pagination.pug
+  include /components/checkbox-list/checkbox-list.pug
+  include /components/range-slider/range-slider.pug
+
   main.website__main
     .search-page.universal-container
-      each room in roomsData
-        +cardRoomSample( room )
+      .search-page__input-parameters
+        +input({
+          id: "search-by__date",
+          type: "date-picker",
+          title: "дата пребывания в отеле",
+          placeholder: "19 авг - 23 авг",
+          widthbypercent: 83,
+        })
+        +input({
+          id: "search-by__guests",
+          type: "dropdown",
+          title: "гости",
+          placeholder: "3 гостя, 1 младенец",
+          widthbypercent: 83,
+        })
+        +rangeSlider({
+          title: "диапазон цены",
+          id: "search-by__range-prices",
+          widthbypercent: 83,
+        })
+        span.search-page__range-slider-note
+        .search-page__checkboxes
+          +titleBar("правила дома")
+            .checkbox-button__array
+              +checkboxButtons({
+                groupname: "search-by__checkbox-allows", 
+                checkboxes: [
+                  { pressed: false, label: "Можно курить" },
+                  { pressed: true,  label: "Можно с питомцами" },
+                  { pressed: true,  label: "Можно пригласить гостей (до 10 человек)" }
+                ]
+              })
+        .search-page__rich-checkboxes
+          +titleBar("доступность")
+          .checkbox-buttons__array
+            +checkboxButtons({
+              richmode: true,
+              groupname: "uik-fe_rich-cbb",
+              checkboxes: [
+                {
+                  title: "Широкий коридор",
+                  info: "Ширина коридоров в номере \nне менее 91 см."
+                },
+                {
+                  title: "Помощник для инвалидов",
+                  info: "На 1 этаже вас встретит специалист  и проводит до номера."
+                }
+              ]
+            })
+      .search-page__filtered-items
+        each room in roomsData
+          +cardRoomSample( room )
