--- a/src/pages/website/__search/website__search.pug
+++ b/src/pages/website/__search/website__search.pug
@@ -187,7 +187,36 @@ block main
                 }
               ]
             })
-
+        .search-page__sleeping-stuff
+          +input({
+            id: "search-by__baths",
+            type: "dropdown",
+            title: "удобства номера",
+            placeholder: "2 спальни, 2 кровати...",
+            widthbypercent: 83,
+            dropdown: {
+              options: [
+                "спальни",
+                "кровати",
+                "ванные комнаты"
+              ]
+            }
+          })
+        .search-page__extra-service
+          +checkboxList({
+            title: "expandable checkbox list",
+            groupname: "uik-fe__checkbox-list_default",
+            expanded: false,
+            disabled: true,
+            checkboxes: [
+              { pressed: false, label: "Завтрак" },
+              { pressed: true,  label: "Письменный стол" },
+              { pressed: true,  label: "Стул для кормления" },
+              { pressed: true,  label: "Кроватка" },
+              { pressed: false, label: "Телевизор" },
+              { pressed: false, label: "Шампунь" }
+            ]
+          })
       .search-page__filtered-items
         each room in roomsData
           +cardRoomSample( room )
